feat: gibdd request